[gd_scene load_steps=25 format=2]

[ext_resource path="res://Finish.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/blue.png" type="Texture" id=3]
[ext_resource path="res://scripts/RedKill.gd" type="Script" id=4]
[ext_resource path="res://assets/red.png" type="Texture" id=5]
[ext_resource path="res://assets/orange.png" type="Texture" id=6]
[ext_resource path="res://assets/player_icon.png.png" type="Texture" id=7]
[ext_resource path="res://assets/ThatNogoFontCasual.ttf" type="DynamicFontData" id=8]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 639.5, 64 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 122 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 34, 6.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 34, 6 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 32, 248 )

[sub_resource type="OccluderPolygon2D" id=9]
closed = false
polygon = PoolVector2Array( 0, 0, 433, 0, 433, -129, 365, -129, 365, -142, 433, -142, 433, -232, 365, -232, 365, -244, 497, -244, 497, -8, 1280, -8, 1280, 128, 0, 128 )

[sub_resource type="OccluderPolygon2D" id=10]
polygon = PoolVector2Array( 656, 282, 724, 282, 724, 294, 656, 294 )

[sub_resource type="OccluderPolygon2D" id=11]
polygon = PoolVector2Array( 886, 342, 954, 342, 954, 354, 886, 354 )

[sub_resource type="OccluderPolygon2D" id=12]
polygon = PoolVector2Array( 1053, 224, 1121, 224, 1121, 236, 1053, 236 )

[sub_resource type="OccluderPolygon2D" id=14]
polygon = PoolVector2Array( 184, 493, 248, 493, 248, -1, 184, -1 )

[sub_resource type="OccluderPolygon2D" id=15]
polygon = PoolVector2Array( 94, 13, 26, 13, 26, 25, 94, 25 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 12, 59.25 )

[sub_resource type="OccluderPolygon2D" id=13]
polygon = PoolVector2Array( 1262, 38.5, 1262, 157.5, 1238, 157.5, 1238, 38.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 396, 4 )

[sub_resource type="DynamicFont" id=16]
size = 55
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=17]
size = 35
use_filter = true
font_data = ExtResource( 8 )

[node name="Node2D" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0.0235294, 0.266667, 1 )

[node name="Player1" parent="." instance=ExtResource( 2 )]
position = Vector2( 43, 529 )

[node name="WALLS" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="WALLS"]
position = Vector2( 640, 656 )
scale = Vector2( 80, 8 )
texture = ExtResource( 7 )

[node name="Sprite2" type="Sprite" parent="WALLS"]
position = Vector2( 465, 470 )
scale = Vector2( 4, 15.25 )
texture = ExtResource( 7 )

[node name="Sprite3" type="Sprite" parent="WALLS"]
position = Vector2( 399, 456.5 )
scale = Vector2( 4.25, 0.812501 )
texture = ExtResource( 7 )

[node name="Sprite4" type="Sprite" parent="WALLS"]
position = Vector2( 399, 354 )
scale = Vector2( 4.25, 0.750002 )
texture = ExtResource( 7 )

[node name="Sprite5" type="Sprite" parent="WALLS"]
position = Vector2( 690, 288 )
scale = Vector2( 4.25, 0.750002 )
texture = ExtResource( 7 )

[node name="Sprite6" type="Sprite" parent="WALLS"]
position = Vector2( 920, 348 )
scale = Vector2( 4.25, 0.750002 )
texture = ExtResource( 7 )

[node name="Sprite7" type="Sprite" parent="WALLS"]
position = Vector2( 1087, 230 )
scale = Vector2( 4.25, 0.750002 )
texture = ExtResource( 7 )

[node name="Sprite8" type="Sprite" parent="WALLS"]
position = Vector2( 60, 19 )
scale = Vector2( 68, 12 )
texture = ExtResource( 6 )

[node name="Sprite9" type="Sprite" parent="WALLS"]
position = Vector2( 216, 245.5 )
scale = Vector2( 4, 30.9375 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WALLS"]
position = Vector2( 640.5, 656 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WALLS"]
position = Vector2( 465, 470 )
shape = SubResource( 3 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="WALLS"]
position = Vector2( 399, 456.5 )
shape = SubResource( 4 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="WALLS"]
position = Vector2( 399, 354 )
shape = SubResource( 5 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="WALLS"]
position = Vector2( 690, 288 )
shape = SubResource( 5 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="WALLS"]
position = Vector2( 920, 348 )
shape = SubResource( 5 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="WALLS"]
position = Vector2( 1087, 230 )
shape = SubResource( 5 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="WALLS"]
position = Vector2( 216, 245 )
shape = SubResource( 7 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="WALLS"]
position = Vector2( 0, 592 )
occluder = SubResource( 9 )

[node name="LightOccluder2D2" type="LightOccluder2D" parent="WALLS"]
occluder = SubResource( 10 )

[node name="LightOccluder2D3" type="LightOccluder2D" parent="WALLS"]
occluder = SubResource( 11 )

[node name="LightOccluder2D4" type="LightOccluder2D" parent="WALLS"]
occluder = SubResource( 12 )

[node name="LightOccluder2D6" type="LightOccluder2D" parent="WALLS"]
occluder = SubResource( 14 )

[node name="LightOccluder2D7" type="LightOccluder2D" parent="WALLS"]
occluder = SubResource( 15 )

[node name="Teleport1" type="Area2D" parent="."]

[node name="Teleport" type="CollisionShape2D" parent="Teleport1"]
position = Vector2( 1250, 96.75 )
shape = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="Teleport1"]
position = Vector2( 1250, 97 )
scale = Vector2( 24, 119 )
texture = ExtResource( 3 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Teleport1"]
position = Vector2( 0, -1 )
occluder = SubResource( 13 )

[node name="Finish" parent="." instance=ExtResource( 1 )]
position = Vector2( 60, 140 )

[node name="Obstacles" type="Area2D" parent="."]
script = ExtResource( 4 )

[node name="Sprite10" type="Sprite" parent="Obstacles"]
position = Vector2( 891.581, 587.85 )
rotation = 1.57079
scale = Vector2( 8.27403, 789.355 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles"]
position = Vector2( 892, 588 )
shape = SubResource( 8 )

[node name="Label" type="Label" parent="."]
margin_left = 9.0
margin_top = 599.0
margin_right = 1278.0
margin_bottom = 717.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 16 )
text = "Use the arrow keys to move around. Falling off the map is
possible, so you can press \"R\" to reload the scene anytime."

[node name="Label2" type="Label" parent="."]
margin_left = 291.0
margin_top = 34.0
margin_right = 1162.0
margin_bottom = 167.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 16 )
text = "Press spacebar to jump. Touching red
spaces will restart the stage. "

[node name="Label3" type="Label" parent="."]
margin_left = 535.0
margin_top = 402.0
margin_right = 1169.0
margin_bottom = 535.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 16 )
text = "Touching blue blocks will teleport
you to the orange blocks"

[node name="Label4" type="Label" parent="."]
margin_left = 8.0
margin_top = 190.0
margin_right = 175.0
margin_bottom = 382.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 17 )
text = "Reach the
green blocks
to proceed
to the next
stage"

[connection signal="body_entered" from="Teleport1" to="Player1" method="_on_Teleport1_body_entered"]
[connection signal="body_entered" from="Obstacles" to="Obstacles" method="_on_Obstacles_body_entered"]
