[gd_scene load_steps=32 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/player_icon.png.png" type="Texture" id=2]
[ext_resource path="res://assets/red.png" type="Texture" id=3]
[ext_resource path="res://scripts/RedKill.gd" type="Script" id=4]
[ext_resource path="res://assets/blue.png" type="Texture" id=5]
[ext_resource path="res://assets/orange.png" type="Texture" id=6]
[ext_resource path="res://Finish.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 153.5, 44.5 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 280, 30.5 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 207.5, 45.125 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 37.5, 11.5 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 29.75, 231.5 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 41.875, 12.25 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 16.5, 73.5 )

[sub_resource type="OccluderPolygon2D" id=18]
polygon = PoolVector2Array( 0, 632, 307, 632, 307, 641, 867, 641, 867, 632, 1280, 632, 1280, 720, 0, 720 )

[sub_resource type="OccluderPolygon2D" id=19]
polygon = PoolVector2Array( 266, 339, 350, 339, 350, 363, 266, 363 )

[sub_resource type="OccluderPolygon2D" id=20]
polygon = PoolVector2Array( 672, 270, 747, 270, 747, 293, 672, 293 )

[sub_resource type="OccluderPolygon2D" id=21]
polygon = PoolVector2Array( 519, 156, 553, 156, 553, 304, 519, 304 )

[sub_resource type="OccluderPolygon2D" id=22]
polygon = PoolVector2Array( 452, 453, 512, 453, 512, 0, 452, 0 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8.25806 )

[sub_resource type="Animation" id=2]
resource_name = "MPno1A"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1127, -11 ), Vector2( 1127, -443 ), Vector2( 1127, -11 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1127, -11 ) ]
}

[sub_resource type="OccluderPolygon2D" id=23]
polygon = PoolVector2Array( 52, 562, 101, 562, 101, 578, 52, 578 )

[sub_resource type="Animation" id=4]
resource_name = "MPno1A"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1127, -11 ), Vector2( 1127, -443 ), Vector2( 1127, -11 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "MPno2A"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1018, -443 ), Vector2( 1018, -11 ), Vector2( 1018, -443 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1127, -11 ) ]
}

[sub_resource type="OccluderPolygon2D" id=24]
polygon = PoolVector2Array( 52, 562, 101, 562, 101, 578, 52, 578 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 24.5, 7.5 )

[sub_resource type="Animation" id=8]
resource_name = "MPno3A"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 373, 609 ), Vector2( 805, 609 ), Vector2( 373, 609 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 373, 609 ) ]
}

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 283.5, 9.75 )

[node name="Node2D" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0.0235294, 0.266667, 1 )

[node name="Player2" parent="." instance=ExtResource( 1 )]
position = Vector2( 76, 519 )

[node name="WALLS" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="WALLS"]
position = Vector2( 152.5, 677 )
scale = Vector2( 19.3125, 5.625 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="WALLS"]
position = Vector2( 586.158, 691 )
scale = Vector2( 35.1053, 3.89902 )
texture = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="WALLS"]
position = Vector2( 1075, 677 )
scale = Vector2( 26, 5.625 )
texture = ExtResource( 2 )

[node name="Sprite4" type="Sprite" parent="WALLS"]
position = Vector2( 904, 197 )
scale = Vector2( 4.6875, 1.4375 )
texture = ExtResource( 2 )

[node name="Sprite5" type="Sprite" parent="WALLS"]
position = Vector2( 710, 282 )
scale = Vector2( 4.6875, 1.4375 )
texture = ExtResource( 2 )

[node name="Sprite6" type="Sprite" parent="WALLS"]
position = Vector2( 482, 221.625 )
scale = Vector2( 3.71875, 28.9219 )
texture = ExtResource( 2 )

[node name="Sprite7" type="Sprite" parent="WALLS"]
position = Vector2( 308, 352 )
scale = Vector2( 5.23437, 1.52344 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WALLS"]
position = Vector2( 153.5, 676.5 )
shape = SubResource( 10 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WALLS"]
position = Vector2( 587, 690.5 )
shape = SubResource( 11 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="WALLS"]
position = Vector2( 1074.5, 677.125 )
shape = SubResource( 12 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="WALLS"]
position = Vector2( 710, 282 )
shape = SubResource( 13 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="WALLS"]
position = Vector2( 904, 197 )
shape = SubResource( 13 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="WALLS"]
position = Vector2( 482, 221 )
shape = SubResource( 14 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="WALLS"]
position = Vector2( 308, 352 )
shape = SubResource( 15 )

[node name="tpshape2" type="CollisionShape2D" parent="WALLS"]
position = Vector2( 427.373, 89.6905 )
shape = SubResource( 17 )

[node name="tpsprite2" type="Sprite" parent="WALLS"]
position = Vector2( 427.373, 89.6905 )
scale = Vector2( 32.746, 147.381 )
texture = ExtResource( 6 )
__meta__ = {
"_editor_description_": ""
}

[node name="LightOccluder2D" type="LightOccluder2D" parent="WALLS"]
occluder = SubResource( 18 )

[node name="LightOccluder2D2" type="LightOccluder2D" parent="WALLS"]
position = Vector2( 0, 1 )
occluder = SubResource( 19 )

[node name="LightOccluder2D3" type="LightOccluder2D" parent="WALLS"]
position = Vector2( 0.5, 0.5 )
occluder = SubResource( 20 )

[node name="LightOccluder2D4" type="LightOccluder2D" parent="WALLS"]
occluder = SubResource( 21 )

[node name="LightOccluder2D5" type="LightOccluder2D" parent="WALLS"]
occluder = SubResource( 22 )

[node name="Moving Platform 1" type="StaticBody2D" parent="."]
position = Vector2( 1127, -11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Moving Platform 1"]
position = Vector2( 76.9998, 570 )
scale = Vector2( 3.0625, 0.968749 )
shape = SubResource( 1 )

[node name="MPno1" type="Sprite" parent="Moving Platform 1"]
position = Vector2( 76.9999, 570 )
scale = Vector2( 3.0625, 0.968749 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Moving Platform 1"]
autoplay = "MPno1A"
anims/MPno1A = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Moving Platform 1"]
position = Vector2( 0.5, 0 )
occluder = SubResource( 23 )

[node name="Obstacles" type="Area2D" parent="."]
position = Vector2( 1127, -11 )
script = ExtResource( 4 )

[node name="MPno2" type="Sprite" parent="Obstacles"]
position = Vector2( 77, 570 )
scale = Vector2( 49, 16 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles"]
position = Vector2( 76.9998, 570 )
scale = Vector2( 3.0625, 0.968749 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Obstacles"]
autoplay = "MPno2A"
anims/MPno1A = SubResource( 4 )
anims/MPno2A = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Obstacles"]
position = Vector2( 0.5, 0 )
occluder = SubResource( 24 )

[node name="Moving Platform 3" type="StaticBody2D" parent="."]
position = Vector2( 373, 609 )

[node name="Sprite" type="Sprite" parent="Moving Platform 3"]
scale = Vector2( 3.0625, 0.9375 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Moving Platform 3"]
shape = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Moving Platform 3"]
autoplay = "MPno3A"
anims/MPno3A = SubResource( 8 )
anims/RESET = SubResource( 9 )

[node name="Obstacles2" type="Area2D" parent="."]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Obstacles2"]
position = Vector2( 587, 650.375 )
scale = Vector2( 560, 19.2498 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles2"]
position = Vector2( 588.5, 650.5 )
shape = SubResource( 16 )

[node name="Teleport2" type="Area2D" parent="."]
position = Vector2( 536, 230 )

[node name="tpshape" type="CollisionShape2D" parent="Teleport2"]
shape = SubResource( 17 )

[node name="tpsprite" type="Sprite" parent="Teleport2"]
scale = Vector2( 32.746, 147.381 )
texture = ExtResource( 5 )

[node name="Finish" parent="." instance=ExtResource( 7 )]
position = Vector2( 84, 198 )
rotation = 1.5708

[connection signal="body_entered" from="Obstacles" to="Obstacles" method="_on_Obstacles_body_entered"]
[connection signal="body_entered" from="Obstacles2" to="Obstacles2" method="_on_Obstacles2_body_entered"]
[connection signal="body_entered" from="Teleport2" to="Player2" method="_on_Teleport2_body_entered"]
